# ubung_1_Hashtabelle

./: CMakeLists.txt  README.md  main.cpp  main.h.in
aktien/: AMAZON.csv  AMD.csv  APPLE.csv  CISCO.csv  META.csv  MICROSOFT.csv  QUALCOMM.csv  TESLA.csv  hash_table
database/: all_aktien  hash_table
headers/: Aktie.h  cmake_variables.h  main.h  menu.h  structs.h
source/: Aktie.cpp  menu.cpp
